tooling/nargo_cli/tests/snapshots/execution_success/loop_invariant_regression/execute__tests__force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUUQ6CMAztZEanMRr80GMMQeHTDznIIuEcHF2Jbejq+GJrsnRLX19fS4OCnyk8o2n0K/g3wjzR22VWROSyKXWqRDq9ISuYN4pd0RuRP8aziA0bUTcmf2Orhwn0F1F/aRhnAv4b8es0/HaDPK/B5wdRNxO4UA5hWoZpBeYA/k+A81CM7yrlb7/nCNP9hHcj+FLsD9cUe/7ngH6qtcdec/amfdZDfD11Yy3pyJB/DdN35aZZnOMv+N6xfsjrBTr72hV96Xp3d11XvV0u+EHM7QO92TqmcQYAAA==",
  "debug_symbols": "XY7BCoMwDIbfJece5nYZvoqIxBqlENISW2GI775UJsguSf58Sf7sMNFYliHIHFdoux1GDcxhGTh6zCGKdffDwSWHrETWghu3rYRKkqGVwuxgQy7n0JpQzpxRjT4ckEyW7eAcmGp19CbQB/133FADjkw/ORfxN5o/6SLXx0mjp6ko1UuVwaOGxmLXvN3z1R/V7Qs=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
